# attendance_system

./: .coveragerc  .dockerignore  .env.example  .env.integrated  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CODEBASE_ANALYSIS.md  DOCKER_INSTALL_GUIDE.md  Dockerfile  Dockerfile.pwa-test  E2E_TEST_REPORT.md  HANDOVER.md  LICENSE  Makefile  Makefileのコピー  PWA_TEST_REPORT.md  PWA_TEST_STATUS.md  QUICKSTART.md  RC_S380_MANUAL.md  README.md  README_FELICA.md  README_TERMINAL_D.md  READMEのコピー.md  REPORT_ANALYTICS_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT.md  alembic.ini  attendance.db  attendance_test.db  daily_report.csv  database_setup.py  docker-compose.pwa-test.yml  docker-compose.test.yml  docker-compose.yml  felica_reader.py  felica_reader_rcs300.py  migrate_felica.py  pyproject.toml  pytest.ini  (+16 more)
.github/workflows/: ci.yml  ci.yml.disabled  deploy.yml  minimal-ci.yml  poetry-ci.yml  quality.yml  test-coverage.yml  test.yml  test.yml.disabled
NFCTimecard/: Package.swift  README.md
NFCTimecard/App/: NFCTimecardApp.swift
NFCTimecard/Managers/: APIClient.swift  NFCManager.swift  ReportService.swift  SessionManager.swift  URLSchemeHandler.swift
NFCTimecard/Managers/App/: Info.plist  NFCTimecardApp.swift
NFCTimecard/Models/: NFCError.swift  ScanResult.swift
NFCTimecard/NFCTimecardApp/NFCTimecardApp/: NFCTimecardAppApp.swift
NFCTimecard/NFCTimecardApp/NFCTimecardApp.xcodeproj/: project.pbxproj
NFCTimecard/NFCTimecardApp/NFCTimecardAppTests/: NFCTimecardAppTests.swift
NFCTimecard/NFCTimecardApp/NFCTimecardAppUITests/: NFCTimecardAppUITests.swift  NFCTimecardAppUITestsLaunchTests.swift
NFCTimecard/Tests/NFCTimecardTests/: URLParametersTests.swift
NFCTimecard/Utils/: Constants.swift  Extensions.swift  KeychainHelper.swift
NFCTimecard/Views/: ContentView.swift  LoginView.swift  NFCScanView.swift  TodayStatusView.swift
alembic/: env.py
alembic/versions/: 3d1b6b1eac3d_normalize_wage_type_values.py  e3f09acd99c7_add_employee_management_and_.py  e6563347355d_update_punch_types_to_in_out_outside_.py
backend/: __init__.py  attendance_test.db  requirements.txt
backend/app/: __init__.py  database.py  database_async.py  health_check.py  main.py  main_enhanced.py  spa_mount_runtime.py  websocket_enhanced.py
backend/app/api/: __init__.py  admin.py  analytics.py  auth.py  dashboard.py  employees.py  health.py  mobile.py  monitoring_dashboard.py  nfc_enhanced.py  punch.py  punch_async.py  reports.py  users.py
backend/app/auth/: __init__.py  dependencies.py  providers.py
backend/app/logging/: __init__.py  config.py
backend/app/middleware/: auth.py  security.py  security_async.py
backend/app/models/: __init__.py  department.py  employee.py  employee_card.py  punch_record.py  summary.py
backend/app/monitoring/: system_monitor.py
backend/app/performance/: async_optimizer.py
backend/data/: offline_queue.db
backend/domain/: __init__.py
backend/scripts/: create_test_admin.py  create_test_employee_with_card.py  daily_batch.py  migrate_employees_table.py  monthly_batch.py  scheduler.py
backend/usecase/: __init__.py  punch_usecase.py
config/: .env.example  config.py
config/environments/: base.py  development.py
docs/: API_REFERENCE.md  database_schema.md  error_codes.md  hardware_recommendations.md  operation_manual.md  operations.md  punch_api_specification.md
docs/integration/: INTEGRATION_SUMMARY.md  README.md  integration_strategy.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
hardware/: card_reader.py  device_monitor.py  multi_reader_manager.py  pasori_backend.py  pasori_mock.py  pasori_rcs300.py  pasori_rcs380.py  pasori_test.py
pwa/: README.md  index.html  manifest.json  offline.html  sw.js
pwa/css/: animations.css  main.css
pwa/js/: app.js  config.js  enhanced-nfc-client.js  ui-controller.js  utils.js
pwa/tests/: test-suite.html
quality/monitoring/: quality_monitor.py
quality/reports/: generate_comprehensive_report.py
scripts/: check_mac_mini_setup.py  create_tables_and_seed.py  deploy_integrated.sh  init_database.py  monitor_integration.sh  seed_test_data.py  setup_mac.sh  smoke.sh  start_mac_mini.sh  validate_env.py  wait_for_db.py
security-implementation-phase2/: comprehensive_tests.py  implementation_guide.md  security_manager_full.py
src/: __init__.py
src/attendance_system/: __init__.py  punch_usecase.py
test-results/: pwa_report.html
tests/: __init__.py  conftest.py  test_admin_api.py  test_analytics_api.py  test_auth.py  test_card_reader.py  test_employee.py  test_enhanced_backend.py  test_health_check.py  test_punch_api.py  test_punch_enhancements.py  test_punch_service.py  test_ratelimit_config.py  test_reports.py  test_security.py  test_smoke_ratelimit.py  test_transitions.py
tests/auth/: test_auth_service.py
tests/e2e/: __init__.py  test_user_scenarios.py
tests/integration/: test_e2e_workflow.py  test_full_workflow.py
tests/middleware/: test_security_middleware.py
tests/pwa/: PWA_TEST_PLAN.md  README.md  __init__.py  conftest.py  test_offline_functionality.py  test_service_worker.py  test_spa_routing.py  test_ui_ux.py
tests/security/: test_new_security_manager.py  test_security_audit.py  test_security_manager.py  test_security_manager_complete.py  test_security_manager_comprehensive.py  test_security_simple.py  test_token_manager.py
tests/security_audit/: test_authentication_security.py  test_csrf_protection.py  test_data_encryption.py  test_sql_injection.py  test_xss_prevention.py
tests/services/: test_analytics_service.py  test_authentication_service.py  test_employee_service.py  test_export_service.py  test_notification_service.py  test_punch_hash_matching.py  test_punch_overnight.py  test_report_service.py
tests/unit/: test_main.py
tests/utils/: test_auth_utils.py  test_logging_config.py  test_logging_setup.py  test_offline_queue.py  test_punch_helpers.py  test_spa_mount_runtime.py  test_time_calculator.py  test_wage_calculator.py
tests/websocket/: __init__.py  test_websocket_manager.py
tools/: README.md  pasori_reader.py
(+190 files in other folders)
